--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 Changes
 =======
 
+1.2 (unreleased)
+----------------
+
+* Bring versions.cfg in line with grok 1.0 release candidate
+  versions.cfg.
+
+
 1.1 (2009-07-03)
 ----------------
 
