--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,8 +4,8 @@ Changes
 1.3 (unreleased)
 ----------------
 
-- Nothing changed yet.
-
+* Use the grok.zope.org/releaseinfo information instead of our own
+  copy of ``versions.cfg``, for easier maintenance.
 
 1.2 (2009-09-14)
 ----------------
