--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,8 +4,7 @@ Changes
 1.4 (unreleased)
 ----------------
 
-- Nothing changed yet.
-
+* Use zope.security instead of zope.app.security.
 
 1.3 (2009-09-16)
 ----------------
