back out the grokcore.component-2.0/martian-0.12 version requirements

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,14 @@ Changes
 1.4 (unreleased)
 ----------------
 
+* **note** Backed out the version requirements for
+  grokcore.component-2.0 and martian-0.12. These requirements
+  stood in the way of further development especially towards
+  grok-1.1 based on the ZTK. The 1.3 version should probably
+  have been called 2.0 like with grokcore.component.
+
+* Ported setup.py dependency fixes from trunk.
+
 * Use zope.security instead of zope.app.security.
 
 1.3 (2009-09-16)
@@ -12,7 +20,7 @@ Changes
 * Use the grok.zope.org/releaseinfo information instead of our own
   copy of ``versions.cfg``, for easier maintenance.
 
-* Depend on grokcore.component 2.0 and the 0.12 Martian - this changesw
+* Depend on grokcore.component 2.0 and the 0.12 Martian - this changes
   inheritance issues but doesn't appear to affect grokcore.security
   itself.
 
