--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changes
 1.5 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Made package comply to zope.org repository policy.
 
 
 1.4 (2009-12-13)
