--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,14 +4,12 @@ Changes
 1.6.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
-
+- Python 3 compatibility.
 
 1.6.3 (2016-01-29)
 ------------------
 
 - Update tests.
-
 
 1.6.2 (2012-05-07)
 ------------------
